--- a/Lalisa-page/assets/scss/article.scss
+++ b/Lalisa-page/assets/scss/article.scss
@@ -91,7 +91,7 @@
             margin-top: 21px;
     
             .title_text {
-                font-size: 24px;
+                font-size: 26px;
             }
         }
     
@@ -105,6 +105,7 @@
                 height: 28px;
                 overflow: hidden;
                 margin-right: 10px;
+                flex-shrink: 0;
     
                 img {
                     width: 100%;
@@ -152,4 +153,424 @@
     .slick-prev {
         left: 62px;
     } 
+}
+
+.block_news {
+    margin-top: 180px;
+
+    .box_news {
+        margin-top: 14px;
+    }
+}
+
+.list_new {
+    margin-top: 30px;
+}
+
+.small_new {
+
+    .image {
+        width: 650px;
+        max-height:340px;
+        max-width: 100%;
+        overflow: hidden;
+        
+        img {
+            width: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .cate_blog {
+        margin-top: 20px;
+    }
+
+    .name_blog {
+        margin-top: 10px;
+
+        .title_text {
+            font-size: 26px;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+        }
+    }
+
+    .content_blog {
+        margin-top: 14px; 
+        
+        .description_text {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+    }
+    
+    .author_blog {
+        margin-top: 16px;
+        display: flex;
+        align-items: center;
+
+        .author_avatar {
+            width: 28px;
+            height: 28px;
+            overflow: hidden;
+            margin-right: 10px;
+            flex-shrink: 0;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .title_text {
+            font-size: 14px;
+            margin-right: 24px;
+            white-space: nowrap;
+
+        }
+
+        .description_text {
+            font-size: 14px;
+            white-space: nowrap;
+        }
+    }
+}
+
+.block_trending {
+    margin-top: 180px;
+
+    .small_title {
+        margin-top: 14px;
+    }
+}
+
+.box_list_category {
+    display: flex;
+    margin-top: 30px;
+    align-items: center;
+    justify-content: space-between;
+
+    .list_category {
+        display: flex;
+
+        a {
+            margin-right: 55px;
+            white-space: nowrap;
+
+            &:nth-child(1) {
+
+                .description_text {
+                    font-weight: 700;
+                    color: #151411;
+                }
+            }
+        }
+    }
+
+    .filter {
+        display: flex;
+        background: #FFFFFF;
+        box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+        padding: 15px 20px;
+        border: 1.5px solid #F3F3F3;
+    
+        .filter_pic {
+            width: 30px;
+            height: 30px;
+            margin-right: 12px;
+            
+            img {
+                width: 100%;
+            }
+        }
+    
+        .fiter_text {
+    
+            .description_text {
+                color: #151411;
+            }
+        }
+    }
+}
+
+.box_list_trending {
+
+    .blog_picture {
+        width: 210px;
+        max-height: 210px;
+        max-width: 100%;
+        margin-right:26px ;
+        overflow: hidden;
+        flex-shrink: 0;
+
+        img {
+            width: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .button {
+        margin-top: 50px ;
+
+        .btn_group {
+            color: #151411;
+            background-color: #FFFFFF;
+            border: 1.5px solid #F3F3F3;
+
+            &:hover {
+                border: 1.5px solid #518581;
+            }
+
+        }
+    }
+}
+
+.detail_trending {
+    display: flex;
+    margin-top: 30px;
+
+    .detail_blog {
+
+        .name_blog {
+            margin-top: 10px;
+
+            .title_text {
+                font-size: 26px;
+            }
+        }
+
+        .content_blog {
+            margin-top: 14px;
+        }
+
+        .author_blog {
+            display: flex;
+            align-items: center;
+            margin-top: 16px;
+
+            .author_avatar {
+                width: 28px;
+                height: 28px;
+                margin-right: 10px;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .title_text {
+                margin-right: 24px;
+                font-size: 14px;
+                white-space: nowrap;
+            }
+        }
+    }
+}
+
+.sub {
+    margin-top: 181px;
+    display: flex;
+    justify-content: space-between;
+
+    .button_talk {
+
+        .btn_group {
+            white-space: nowrap;
+
+            &:hover {
+                color: #FFFFFF;
+                background-color: #518581;
+                box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1023px) {
+    
+    .title_text {
+        font-size: 40px;
+    }
+
+    .description_text {
+        font-size: 16px;
+    }
+    
+    .btn_group {
+        padding: 15px 46px;
+        font-size: 16px;
+    }
+
+    .block_banner {
+        margin-top: 50px;
+    }
+
+    .block_news {
+        margin-top: 100px;
+    }
+
+    .block_trending {
+        margin-top: 100px;
+    }
+
+
+    .banner {
+
+        .detail_blog {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 11px 12px;
+            margin-left: 18px;
+            margin-right: 18px;
+
+            .name_blog {
+                margin-top: 10px;
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+            }
+        }
+
+        .author_blog {
+
+            .title_text {
+                font-size: 12px !important;
+            }
+
+            .date_create {
+                white-space: nowrap;
+                font-size: 12px !important;
+            }
+        }
+    }
+
+    .list_new {
+        margin-top: 10px;
+    }
+
+    .small_new {
+        margin-top: 20px;
+    }
+
+    .list_category {
+
+        a {
+            margin-right: 26px !important;
+
+            &:nth-child(n+4) {
+                display: none;
+
+            }
+        }
+        
+    }
+
+    .detail_trending {
+
+        .detail_blog {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+          
+
+            .name_blog {
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+            }
+
+            .content_blog {
+                display: none;
+            }
+
+
+        }
+    }
+
+    .filter {
+        display: none !important;
+    }
+
+    
+}
+
+@media screen and(max-width:767px) {
+    
+    .sub {
+        flex-direction: column;
+    }
+
+    .detail_trending {
+
+        .blog_picture {
+            width: 110px;
+        }
+
+        .detail_blog {
+
+            .author_blog {
+
+                .title_text{
+                    font-size: 12px !important;
+                }
+
+                .date_create {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .small_new {
+
+        .author_blog {
+
+            .author_avatar{
+                width: 20px;
+                height: 20px;
+                margin-right: 8px;
+            }
+            
+            .title_text {
+                margin-right: 10px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:599px) {
+
+    .title_text {
+        font-size: 14px !important;
+    }
+
+    .description_text {
+        font-size: 14px;
+    }
+
+    .banner_title {
+
+        .title_text {
+            font-size: 26px !important;
+        }
+    }
+
+    .sub {
+        margin-top: 100px;
+    }
+
+    .sub_title {
+        margin-bottom: 20px;
+
+        .title_text {
+            font-size: 24px !important;
+        }
+    }
+
 }
