--- a/Lalisa-page/views/article.html
+++ b/Lalisa-page/views/article.html
@@ -137,7 +137,191 @@
 
             </div>
         </section>
+        <section class="block_news">
+            <div class="container">
+                <div class="title">
+                    <p class="block_title">Daily News</p>
+                </div>
+                <div class="box_news">
+                    <div class="title">
+                        <p class="title_text">Today top headlines</p>
+                    </div>
+                    <div class="list_new">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="small_new">
+                                    <div class="image">
+                                        <img src="../assets/img/new.png" alt="">
+                                    </div>
+                                    <div class="cate_blog">
+                                        <a href=""><p class="description_text">Tips and Trick</p></a>
+                                    </div>
+                                    <div class="name_blog">
+                                        <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                            Custom Millwork</p></a>
+                                    </div>
+                                    <div class="content_blog">
+                                        <p class="description_text">Is it true that the bedroom design is the most personal reflection of the owner? Many people believe that to be able to judge a person's personality, it is enough to</p>
+                                    </div>
+                                    <div class="author_blog">
+                                        <div class="author_avatar">
+                                            <img src="../assets/img/avatar_author.png" alt="">
+                                        </div>
+                                        <p class="title_text">By Morgan Goldberg</p>
+                                        <p class="description_text date_create">Friday, 1 April 2022</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="small_new">
+                                    <div class="image">
+                                        <img src="../assets/img/new2.png" alt="">
+                                    </div>
+                                    <div class="cate_blog">
+                                        <a href=""><p class="description_text">Tips and Trick</p></a>
+                                    </div>
+                                    <div class="name_blog">
+                                        <a href=""><p class="title_text">Create a non-monotonous and dynamic interior atmosphere with these 9 variations of wall tiles</p></a>
+                                    </div>
+                                    <div class="content_blog">
+                                        <p class="description_text">Quoted from The Healthy Home Economist, a study in 1932 stated that color doesn't really have to be visible to have an effect
+                                            The radiance of a</p>
+                                    </div>
+                                    <div class="author_blog">
+                                        <div class="author_avatar">
+                                            <img src="../assets/img/avatar_author.png" alt="">
+                                        </div>
+                                        <p class="title_text">By Juliana Athorn</p>
+                                        <p class="description_text date_create">Friday, 1 April 2022</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </section>
+
+        <section class="block_trending">
+            <div class="container">
+                <div class="title">
+                    <p class="block_title">Trending Topics</p>
+                </div>
+                <div class="small_title">
+                    <p class="title_text">Popular last week</p>
+                </div>
+                <div class="box_list_category">
+                    <div class="list_category">
+                        <a href=""><p class="description_text">All</p></a>
+                        <a href=""><p class="description_text">Tips and Trick</p></a>
+                        <a href=""><p class="description_text">Interior Design</p></a>
+                        <a href=""><p class="description_text">Design Inspiration</p></a>
+                        <a href=""><p class="description_text">Color Guide</p></a>
+                    </div>
+                    <div class="filter">
+                        <div class="filter_pic">
+                            <img src="../assets/img/sort.png" alt="">
+                        </div>
+                        <div class="fiter_text">
+                            <p class="description_text">Filter</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box_list_trending">
+                    <div class="detail_trending">
+                        <div class="blog_picture">
+                            <img src="../assets/img/trending.png" alt="Product">
+                        </div>
+                    
+                        <div class="detail_blog">
+                            <div class="cate_blog">
+                                <a href=""><p class="description_text">Tips and Trick</p></a>
+                            </div>
+                            <div class="name_blog">
+                                <a href=""><p class="title_text">Beautiful and Functional Home Terrace Decorations</p></a>
+                            </div>
+                            <div class="content_blog">
+                                <p class="description_text summary_blog">Home terrace decorations are part of every decoration or overall home design. Interiordesign.id – If by chance your house has enough space or space.</p>
+                            </div>
+                            
+                            <div class="author_blog">
+                                <div class="author_avatar">
+                                    <img src="../assets/img/avatar_author.png" alt="">
+                                </div>
+                                <p class="title_text">By Jerremy Jean</p>
+                                <p class="description_text date_create">Friday, 1 April 2022</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="detail_trending">
+                        <div class="blog_picture">
+                            <img src="../assets/img/trending2.png" alt="Product">
+                        </div>
+                    
+                        <div class="detail_blog">
+                            <div class="cate_blog">
+                                <a href=""><p class="description_text">Design Inspiration</p></a>
+                            </div>
+                            <div class="name_blog">
+                                <a href=""><p class="title_text">Modern Minimalist Home Design: Aesthetics of Modern Home Interiors</p></a>
+                            </div>
+                            <div class="content_blog">
+                                <p class="description_text summary_blog">Home terrace decorations are part of every decoration or overall home design. Interiordesign.id – If by chance your house has enough space or space.</p>
+                            </div>
+                            
+                            <div class="author_blog">
+                                <div class="author_avatar">
+                                    <img src="../assets/img/avatar_author.png" alt="">
+                                </div>
+                                <p class="title_text">By Jerremy Jean</p>
+                                <p class="description_text date_create">Wednesday, 17 March 2022</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="detail_trending">
+                        <div class="blog_picture">
+                            <img src="../assets/img/trending3.png" alt="Product">
+                        </div>
+                    
+                        <div class="detail_blog">
+                            <div class="cate_blog">
+                                <a href=""><p class="description_text">Color Guide</p></a>
+                            </div>
+                            <div class="name_blog">
+                                <a href=""><p class="title_text">20+ Best Kitchen Paint Colors That Make Kitchen Spaces Look More Fun</p></a>
+                            </div>
+                            <div class="content_blog">
+                                <p class="description_text summary_blog">Home terrace decorations are part of every decoration or overall home design. Interiordesign.id – If by chance your house has enough space or space.</p>
+                            </div>
+                            
+                            <div class="author_blog">
+                                <div class="author_avatar">
+                                    <img src="../assets/img/avatar_author.png" alt="">
+                                </div>
+                                <p class="title_text">By Filipus Pendi</p>
+                                <p class="description_text date_create">Saturday, 29 February 2022</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="button text-center">
+                        <a href="" class="btn btn_group">Load More</a>
+                    </div>
+                </div>
+
+                <div class="sub">
+                    <div class="sub_title">
+                        <p class="title_text">Subscribe our newsletter</p>
+                    </div>
+                    <div class="button_talk">
+                        <a href="#" class="btn btn_group">Let’s Talk <img src="../assets/img/arrow-right.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
