--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -28,16 +28,16 @@
                     
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item ">
+                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
                                 <a class="nav-link" href="product.html">Product</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
                                 <a class="nav-link" href="article.html">Article</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
                                 <a class="nav-link" href="aboutus.html">About Us</a>
                             </li>
                         </ul>
