--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -22,31 +22,61 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="index.html"><img src="../assets/img/logo.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" id="open_button" type="button">
                         <span class="navbar-toggler-icon"><img src="../assets/img/menu.png" alt=""></span>
                     </button>
                     
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="product.html">Product</a>
                             </li>
-                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
+                            <li class="nav-item">
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
-                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
+                            <li class="nav-item">
                                 <a class="nav-link" href="article.html">Article</a>
                             </li>
-                            <li class="nav-item" style="border-bottom: 3px solid #ffffff;">
+                            <li class="nav-item">
                                 <a class="nav-link" href="aboutus.html">About Us</a>
                             </li>
                         </ul>
                         <div class="my-2 my-lg-0">
                             <div class="options_navbar">
-                                <a class="icon_option" href="">
+                                <a class="icon_option" href="#">
                                     <img src="../assets/img/cart.png" alt="">
                                 </a>
-                                <a class="icon_option" href="">
+                                <a class="icon_option" href="#">
+                                    <img src="../assets/img/user.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidenav" id="mySidenav">
+                        <div class="item_close">
+                            <a class="close_icon">&times;</a>
+                        </div>
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="product.html">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="services.html">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="article.html">Article</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="aboutus.html">About Us</a>
+                            </li>
+                        </ul>
+                        <div class="my-2 my-lg-0">
+                            <div class="options_navbar">
+                                <a class="icon_option" href="#">
+                                    <img src="../assets/img/cart.png" alt="">
+                                </a>
+                                <a class="icon_option" href="#">
                                     <img src="../assets/img/user.png" alt="">
                                 </a>
                             </div>
@@ -79,7 +109,7 @@
                         <div class="input-group">
                             <input type="search" class="form-control rounded" placeholder="Search property"
                                 aria-label="Search" aria-describedby="search-addon" />
-                            <button type="button" class="btn title_text btn_group">Search</button>
+                            <button type="submit" class="btn title_text btn_group">Search</button>
                         </div>
                     </div>
                 </div>
@@ -693,6 +723,7 @@
     <script src="../assets/js/slick.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/all.min.js"></script>
+    <script src="../assets/js/header.js"></script>
     <script src="../assets/js/index.js"></script>
 </body>
 
