--- a/Lalisa-page/assets/css/about_us.css
+++ b/Lalisa-page/assets/css/about_us.css
@@ -246,201 +246,49 @@ a:hover {
   font-size: 64px;
 }
 
-.box_banner_photo {
-  margin-top: 50px;
+.box_vid {
   width: 100%;
   max-height: 550px;
-  overflow: hidden;
-}
-.box_banner_photo img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
 
-.services {
-  margin-top: 50px;
-  padding-top: 20px;
-  border-top: 2px solid #F3F3F3;
-}
-.services .box_service .numb {
-  margin-top: 30px;
-}
-.services .box_service .numb .title_text {
-  color: #518581;
-  font-size: 64px;
-}
-.services .box_service .name_service {
-  margin-top: 26px;
-}
-.services .box_service .name_service .title_text {
-  font-size: 24px;
-}
-.services .box_service .detail_service {
-  margin-top: 6px;
-}
-
-.block_portofolio {
+.block_mission {
   margin-top: 180px;
 }
-.block_portofolio .row {
+.block_mission .row {
+  margin-top: 14px;
+}
+
+.box_archivement {
+  display: flex;
+  margin-top: 50px;
+}
+.box_archivement .detail_archivement {
   margin-top: 10px;
 }
 
-.content .title_text {
-  margin-top: 18px;
-  font-size: 18px;
-  color: #518581;
+.small_box_archivement {
+  margin-right: 50px;
 }
 
-.list_porto {
-  margin-top: 50px;
+.box_mission {
+  display: flex;
 }
-.list_porto .col-xl-5 .box_porto {
-  position: relative;
+.box_mission:nth-child(n+2) {
+  margin-top: 30px;
 }
-.list_porto .col-xl-5 .box_porto .porto_img {
-  width: 100%;
-  max-height: 623px;
+.box_mission .icon {
+  width: 62px;
+  height: 62px;
   overflow: hidden;
+  flex-shrink: 0;
+  margin-right: 25px;
 }
-.list_porto .col-xl-5 .box_porto .porto_img img {
+.box_mission .icon img {
   width: 100%;
-  height: 100%;
-  object-fit: fill;
 }
-.list_porto .col-xl-5 .box_porto .porto_title {
-  position: absolute;
-  bottom: 30px;
-  left: 30px;
-}
-.list_porto .col-xl-5 .box_porto .porto_title .title_text {
-  color: #FFFFFF;
+.box_mission .description .title .title_text {
   font-size: 26px;
 }
-.list_porto .col-xl-5 .box_porto .porto_title .description_text {
-  color: #FFFFFF;
-  opacity: 0.7;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  margin-top: 6px;
-}
-.list_porto .col-xl-5 .box_porto .porto_title .description_text:nth-child(3) {
-  opacity: 100;
+.box_mission .description .content {
   margin-top: 16px;
-}
-.list_porto .col-xl-7 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.list_porto .col-xl-7 .box_porto {
-  position: relative;
-}
-.list_porto .col-xl-7 .box_porto .porto_img {
-  width: 100%;
-  max-height: 301px;
-  overflow: hidden;
-}
-.list_porto .col-xl-7 .box_porto .porto_img img {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-}
-.list_porto .col-xl-7 .box_porto .porto_title {
-  position: absolute;
-  bottom: 30px;
-  left: 30px;
-}
-.list_porto .col-xl-7 .box_porto .porto_title .title_text {
-  color: #FFFFFF;
-  font-size: 26px;
-}
-.list_porto .col-xl-7 .box_porto .porto_title .description_text {
-  color: #FFFFFF;
-  opacity: 0.7;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  margin-top: 6px;
-}
-.list_porto .col-xl-7 .box_porto .porto_title .description_text:nth-child(3) {
-  opacity: 10;
-  margin-top: 16px;
-}
-
-.talk {
-  margin-top: 181px;
-  display: flex;
-  justify-content: space-between;
-}
-.talk .talk_title {
-  max-width: 35%;
-}
-
-@media screen and (max-width: 1199px) {
-  .banner_title .banner_title_text {
-    font-size: 26px !important;
-  }
-  .list_porto .box_porto {
-    margin-top: 20px;
-  }
-  .list_porto .box_porto .porto_img {
-    width: 327px;
-    height: 409px;
-  }
-  .list_porto .box_porto .porto_title .description_text {
-    margin-top: 6px !important;
-  }
-}
-@media screen and (max-width: 1023px) {
-  .title_text {
-    font-size: 40px;
-  }
-  .description_text {
-    font-size: 16px;
-  }
-  .btn_group {
-    padding: 15px 46px;
-    font-size: 16px;
-  }
-  .block_banner {
-    margin-top: 50px;
-  }
-  .block_portofolio {
-    margin-top: 100px;
-  }
-  .talk {
-    margin-top: 100px;
-    flex-direction: column;
-  }
-  .talk .talk_title {
-    max-width: 100%;
-  }
-  .talk .button_talk {
-    margin-top: 16px;
-  }
-}
-@media screen and (max-width: 599px) {
-  .title_text {
-    font-size: 14px !important;
-  }
-  .description_text {
-    font-size: 14px;
-  }
-  .box_service .numb {
-    margin-top: 20px;
-  }
-  .box_service .numb .title_text {
-    font-size: 32px !important;
-  }
-  .box_service .name_service {
-    margin-top: 20px;
-  }
-  .box_service .detail_service .description_text {
-    font-size: 12px;
-  }
 }
