--- a/Lalisa-page/assets/css/detail_product.css
+++ b/Lalisa-page/assets/css/detail_product.css
@@ -10,6 +10,7 @@
   border-bottom: 2px solid #F3F3F3;
   position: sticky;
   top: 0;
+  z-index: 99;
 }
 
 .navbar {
@@ -43,6 +44,37 @@ li.nav-item .nav-link {
 
 .icon_option:nth-child(1) {
   margin-right: 28px;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  background-color: #F3F3F3;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.sidenav li.nav-item {
+  margin-right: 60px;
+  padding: 15px 0px;
+}
+.sidenav .options_navbar {
+  display: flex;
+  justify-content: space-around;
+}
+.sidenav .item_close {
+  width: 100%;
+}
+.sidenav .item_close .close_icon {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 @media (max-width: 992px) {
