--- a/Lalisa-page/assets/scss/article.scss
+++ b/Lalisa-page/assets/scss/article.scss
@@ -138,7 +138,7 @@
 }
 
 .list_article {
-
+    
     .slick-prev, 
     .slick-next {
         z-index: 1;
@@ -439,6 +439,7 @@
         .author_blog {
 
             .title_text {
+                margin-right: 10px !important;
                 font-size: 12px !important;
             }
 
