--- a/Lalisa-page/views/article.html
+++ b/Lalisa-page/views/article.html
@@ -21,13 +21,43 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="index.html"><img src="../assets/img/logo.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" id="open_button" type="button">
                         <span class="navbar-toggler-icon"><img src="../assets/img/menu.png" alt=""></span>
                     </button>
                     
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item ">
+                                <a class="nav-link" href="product.html">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="services.html">Services</a>
+                            </li>
+                            <li class="nav-item page_landing">
+                                <a class="nav-link" href="article.html">Article</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="aboutus.html">About Us</a>
+                            </li>
+                        </ul>
+                        <div class="my-2 my-lg-0">
+                            <div class="options_navbar">
+                                <a class="icon_option" href="#">
+                                    <img src="../assets/img/cart.png" alt="">
+                                </a>
+                                <a class="icon_option" href="#">
+                                    <img src="../assets/img/user.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidenav" id="mySidenav">
+                        <div class="item_close">
+                            <a class="close_icon">&times;</a>
+                        </div>
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item">
                                 <a class="nav-link" href="product.html">Product</a>
                             </li>
                             <li class="nav-item">
@@ -86,7 +116,7 @@
                                     <img src="../assets/img/avatar_author.png" alt="">
                                 </div>
                                 <p class="title_text">By Morgan Goldberg</p>
-                                <p class="description_text date_create">Friday, 1 April 2022</p>
+                                <p class="description_text date_create">Fri, 1 April 2022</p>
                             </div>
                         </div>
                    </div>
@@ -107,7 +137,7 @@
                                 <img src="../assets/img/avatar_author.png" alt="">
                             </div>
                             <p class="title_text">By Morgan Goldberg</p>
-                            <p class="description_text date_create">Friday, 1 April 2022</p>
+                            <p class="description_text date_create">Fri, 1 April 2022</p>
                         </div>
                     </div>
                     </div>
@@ -128,7 +158,7 @@
                                 <img src="../assets/img/avatar_author.png" alt="">
                             </div>
                             <p class="title_text">By Morgan Goldberg</p>
-                            <p class="description_text date_create">Friday, 1 April 2022</p>
+                            <p class="description_text date_create">Fri, 1 April 2022</p>
                         </div>
                     </div>
                     </div>
@@ -378,6 +408,7 @@
     <script src="../assets/js/slick.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/all.min.js"></script>
+    <script src="../assets/js/header.js"></script>
     <script src="../assets/js/article.js"></script>
 </body>
 
